19.3 update integration tests for PersonControllerXmlTest
- include testDisablePersonById for XML